force-app/main/default/objects/Event_Group_Package__c/Event_Group_Package__c.object-meta.xml
<CustomObject>
    <description>Similar to a price book, the subset of products that should be available for an opportunity and/or event group.</description>
    <label>Event Group Product</label>
    <nameField>
        <displayFormat>EGP-{00000000}</displayFormat>
        <label>EGP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Group Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>