force-app/main/default/objects/Event_Group_Package__c/fields/Best_Deal__c.field-meta.xml
<CustomField>
    <fullName>Best_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Best Deal</label>
    <type>Checkbox</type>
</CustomField>