force-app/main/default/objects/Event_Group_Package__c/fields/KSA_Webcode__c.field-meta.xml
<CustomField>
    <fullName>KSA_Webcode__c</fullName>
    <formula>Team_Opportunity__r.KSA_Webcode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KSA Webcode</label>
    <type>Text</type>
</CustomField>