force-app/main/default/objects/Event_Group_Package__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product that is being sold as an event group and/or opportunity package.</description>
    <inlineHelpText>The product that is being sold as an event group and/or opportunity package.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Event_Group_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>