force-app/main/default/objects/Event_Group_Package__c/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot;+Product__r.Image_ID__c, Name,240,320)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Image</label>
    <type>Text</type>
</CustomField>