force-app/main/default/objects/Event_Group_Package__c/fields/Room_Size__c.field-meta.xml
<CustomField>
    <fullName>Room_Size__c</fullName>
    <formula>VALUE(TEXT(Product__r.Room_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>