force-app/main/default/objects/Event_Group_Package__c/fields/Team_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Team_Opportunity__c</fullName>
    <description>The team opportunity associated with this event team package. A team opportunity could have a number of packages available for selection by associated passengers.</description>
    <inlineHelpText>The team opportunity associated with this event team package. A team opportunity could have a number of packages available for selection by associated passengers.</inlineHelpText>
    <label>Team Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Event_Team_Packages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>