force-app/main/default/objects/Event_Group_Package__c/recordTypes/Airfare.recordType-meta.xml
<RecordType>
    <fullName>Airfare</fullName>
    <active>true</active>
    <description>Airfare</description>
    <label>Airfare</label>
</RecordType>