force-app/main/default/objects/Event_Group_Package__c/recordTypes/Product_Add_On.recordType-meta.xml
<RecordType>
    <fullName>Product_Add_On</fullName>
    <active>true</active>
    <description>Product Add On</description>
    <label>Product Add On</label>
</RecordType>