force-app/main/default/objects/Event_Group_Package__c/recordTypes/RGP.recordType-meta.xml
<RecordType>
    <fullName>RGP</fullName>
    <active>true</active>
    <description>RGP</description>
    <label>RGP</label>
</RecordType>